tests/errors/attribute-derive-duplicate.ari
@derive(Debug, Debug)
struct Point {
  x: i64,
}

fn main() -> i64 {
  return 0;
}
